--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -38,7 +38,7 @@
   color: #212121;
 }
 
-.modal__image_container {
+.modal__image-container {
   position: relative;
 }
 
@@ -68,7 +68,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  flex-direction: row-reverse;
 }
 
 .modal__title {
